@startuml
title CLASS DIAGRAM\nEngineeringCollege Django Project - Page 2

skinparam backgroundColor white
skinparam handwritten false
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam defaultFontName Arial
skinparam defaultFontSize 28
skinparam titleFontSize 32
skinparam titleFontStyle bold
skinparam class {
  BorderColor #2F5597
  BackgroundColor #F8FBFF
  HeaderBackgroundColor #D9EAF7
  ArrowColor #4F5B66
  FontSize 28
}
skinparam package {
  BorderColor #2F5597
  BackgroundColor #EEF4FB
  FontSize 32
  FontStyle bold
}

package "dashboard.models" {
  class Subject {
    +name: CharField(200)
    +code: CharField(50)
    +credits: IntegerField
  }

  class FDP {
    +fdp_type: CharField
    +title: CharField
    +from_date: DateField
    +to_date: DateField
    +mode: CharField
    +level: CharField
    +certificate: FileField
  }

  class BTechProject {
    +ht_no: CharField
    +student_name: CharField
    +project_title: CharField
    +approved: BooleanField
    +marks: CharField
  }

  class ProjectDownloadPayment {
    +merchant_order_id: CharField(unique)
    +amount_paise: PositiveIntegerField
    +status: CharField
    +payment_method: CharField
    +download_count: PositiveIntegerField
  }

  class Student {
    +ht_no: CharField(unique)
    +student_name: CharField
    +email: EmailField
    +department: CharField
    +year: IntegerField
    +sem: IntegerField
    +photo: ImageField
    +pdf_file: FileField
    +pdf_generated: BooleanField
  }
}

Faculty "*" --o "*" Subject : subjects
Faculty "1" --o "*" FDP : fdps
Faculty "1" --o "*" BTechProject : btech_projects
ProjectDownloadPayment "1" --o "1" Student : payment
@enduml